<resources>
    <string-array name="category">
        <item>Protein</item>
        <item>Sayur</item>
        <item>Buah</item>
        <item>Bumbu Dapur</item>
        <item>Minuman</item>
        <item>Makanan</item>
    </string-array>

    <string-array name="satuan">
        <item>Buah/Lembar/Siung/Butir/Ikat</item>
        <item>Ons</item>
        <item>Kg</item>
        <item>Bungkus</item>
    </string-array>

    <string-array name="storage_location_kulkasku">
        <item>Freezer</item>
        <item>Chiller</item>
    </string-array>

    <string-array name="add_location">
        <item>Lemari Dapur</item>
        <item>KulkasKu</item>

    </string-array>

    <string-array name="storage_location_kitchen">
        <item>Lemari Atas</item>
        <item>Lemari Bawah</item>
    </string-array>

    <string name="app_name">kuPin</string>
    <string name="beranda">Beranda</string>
    <string name="resep">Resep</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="Profil">Profil</string>
    <string name="version_0_0_1">Version 0.0.1</string>
    <string name="kulkas_pintar">Kulkas Pintar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="username">Username</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="material_name">Material Name</string>
    <string name="_10_10_10">0 - 0 - 0</string>
    <string name="_100">100</string>
    <string name="tambah_bahan">Tambah Bahan</string>
    <string name="nama_bahan">Nama Bahan</string>
    <string name="jumlah_bahan">Jumlah Bahan</string>
    <string name="tanggal_batas_konsumsi">Tanggal Batas Konsumsi</string>
    <string name="detail_bahan">Detail Bahan</string>
    <string name="waktu_batas_konsumsi">Waktu Batas Konsumsi</string>
    <string name="_10_hari">10 Hari</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="edit_bahan">Edit Bahan</string>
    <string name="nama">Nama</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hi_user">Hi User</string>
    <string name="simpan">Simpan</string>
    <string name="error_field">Field ini harus diisi</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="hapus_data">Hapus Data?</string>
    <string name="message">message</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="delete_message">Apakah kamu yakin ingin menghapus data ini?</string>
    <string name="keluar">Keluar</string>
    <string name="rekomendasi_bahan">Rekomendasi Bahan</string>
    <string name="persediaan_hampir_habis">Persediaan Hampir Habis</string>
    <string name="kulkasku">KulkasKu</string>
    <string name="daftar_kulkas_yang_ada">Daftar Bahan Makanan Yang Ada</string>
    <string name="report">Report</string>
    <string name="laporan_penggunaan_bahan_makanan">Laporan Penggunaan Bahan Makanan</string>
    <string name="bahan_bahan">Daftar Bahan Bahan</string>
    <string name="add_data">Add data</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="cari">Cari</string>
    <string name="mulai">Mulai</string>
    <string name="selesai">Selesai</string>
    <string name="kategori">Kategori</string>
    <string name="daging">Daging</string>
    <string name="sayur">Sayur</string>
    <string name="buah">Buah</string>
    <string name="bahan_dapur">Bahan Dapur</string>
    <string name="minuman">Minuman</string>
    <string name="makanan">Makanan</string>
    <string name="nama_resep">Nama Resep</string>
    <string name="deskripsi">deskripsi</string>
    <string name="sajian_1_porsi">Sajian 1 Porsi</string>
    <string name="bahan_bahan_recipe">Bahan - Bahan</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, nisl quis faucibus tincidunt, elit erat consectetur elit, at placerat risus tellus in est. Nulla posuere, risus a facilisis semper, turpis dui tristique lacus, id dapibus lorem mauris sit amet arcu. Maecenas pellentesque arcu id justo sollicitudin facilisis. In consectetur, risus at efficitur fringilla, mauris metus fringilla arcu, eget tempus ex velit sed nulla. Fusce condimentum diam ligula, at consectetur dui vestibulum id. Sed vitae dolor nec erat cursus rhoncus non eget lorem. Vivamus cursus, quam vel dapibus rhoncus, lacus metus aliquam massa, sed eleifend ex nisi eget orci. Sed consectetur nisl vel laoreet feugiat. Donec suscipit justo dui, ac consequat turpis tristique et. Suspendisse potenti. Pellentesque pellentesque ex a justo malesuada, et lacinia odio suscipit. Proin faucibus, arcu vitae iaculis posuere, ex purus sodales lacus, vel facilisis diam massa in tellus. Cras eu magna id enim interdum facilisis. Vivamus blandit euismod arcu, nec posuere felis lacinia at. Nam fringilla, tortor et varius auctor, velit tortor dapibus lorem, sed eleifend orci ex vitae lacus.</string>
    <string name="langkah_langkah">Langkah - Langkah</string>
    <string name="rekomendasi_resep">Rekomendasi Resep</string>
    <string name="seluruh_resep">Seluruh Resep</string>
    <string name="masukkan_nama_resep">Masukkan Nama Resep</string>
    <string name="lemari_dapur">Lemari Dapur</string>
    <string name="daftar_bahan_makanan_yang_ada_di_lemari_dapur">Daftar Bahan Makanan yang Ada di Lemari Dapur</string>
    <string name="rekomendasi_resep_dan_seluruh_resep">Rekomendasi Resep dan Seluruh Resep</string>
    <string name="protein">Protein</string>
    <string name="bumbu_dapur">Bumbu Dapur</string>
    <string name="lokasi_penyimanan">Lokasi Penyimanan</string>
    <string name="freezer">Freezer</string>
    <string name="tambah_di">Tambah Di</string>
    <string name="tambah_bahan_di_lemari_dapur">Tambah Bahan di Lemari Dapur</string>
    <string name="tambah_bahan_di_kulkas">Tambah Bahan di Kulkas</string>
</resources>