<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_data"
            android:textColor="@color/blue_1"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_message_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            
            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/tidak"
                android:fontFamily="@font/poppins_semibold"
                app:cornerRadius="10dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/ya"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semibold"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/blue_1"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>