<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.report.ReportActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/report"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/pilih_tanggal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/iv_calendar_start_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_calendar_add"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_date_calendar_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/mulai"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_calendar_start_date"
        app:layout_constraintStart_toEndOf="@+id/iv_calendar_start_date"
        app:layout_constraintTop_toTopOf="@+id/iv_calendar_start_date" />

    <ImageView
        android:id="@+id/iv_calendar_end_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_calendar_add"
        app:layout_constraintStart_toStartOf="@+id/iv_calendar_start_date"
        app:layout_constraintTop_toBottomOf="@+id/iv_calendar_start_date" />

    <TextView
        android:id="@+id/tv_date_calendar_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/selesai"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_calendar_end_date"
        app:layout_constraintStart_toEndOf="@+id/iv_calendar_end_date"
        app:layout_constraintTop_toTopOf="@+id/iv_calendar_end_date" />

    <Button
        android:id="@+id/btn_cari"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_2"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cari"
        android:textColor="@color/blue_1"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_calendar_end_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_report"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cari"
        tools:listitem="@layout/report_list" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/tidak_ada_data"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>